--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+body {
+    margin: 0;
+    overflow: hidden;
+}
+
+.example-container {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+a-scene {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+/* MindARのUIオーバーレイ設定 */
+.mindar-ui-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .ar-ui {
     position: fixed;
     top: 0;
