--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     overflow: hidden;
 }
 .buttons {
-    position: fixed;
+    position: absolute;
     bottom: 40px;  /* 下からの距離 */
     left: 0;
     right: 0;
@@ -12,6 +12,7 @@ body {
     align-items: center;
     gap: 20px;  /* ボタン間の間隔 */
     z-index: 1000;
+  pointer-events: auto;
 }
 /* 撮影ボタン */
 #capture {
@@ -45,3 +46,10 @@ body {
     transform: scale(1.05);
 }
 
+a-scene {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
