--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ a-scene {
     background-color: rgba(255, 255, 255, 0.9);
     border: 4px solid white;
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    font-size: 24px; /* アイコンサイズ */
+    color: #333;
 }
 /* 箱から出すボタン */
 #release-button {
@@ -71,4 +73,22 @@ a-scene {
 .button:hover {
     background-color: rgba(255, 255, 255, 0.9);
     transform: scale(1.05);
+}
+.social-links {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 4px solid white;
+    font-size: 24px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+.social-links:active {
+    transform: scale(0.95);
 }
