--- a/style.css
+++ b/style.css
@@ -59,6 +59,17 @@ a-scene {
     border-radius: 50%;
     background-color: rgba(255, 99, 71, 0.8);  /* トマト色 */
     color: white;
+    border: 2px solid white;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+}
+
+#website-button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.9);
+    font-size: 24px;
+    color: #333333;
     border: none;
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
 }
@@ -74,20 +85,7 @@ a-scene {
     background-color: rgba(255, 255, 255, 0.9);
     transform: scale(1.05);
 }
-.social-links {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.9);
-    border: 4px solid white;
-    font-size: 24px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s ease;
-}
+
 
 .social-links:active {
     transform: scale(0.95);
